--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Uploaders: Alessio Treglia <alessio@debian.org>
 Build-Depends:
  debhelper (>= 7),
  python-all
+ python-support
 Standards-Version: 3.9.3
 X-Python-Version: all
 Homepage: https://launchpad.net/glade2script
@@ -19,7 +20,6 @@ Depends:
  gir1.2-gtk-3.0,
  ${misc:Depends},
  ${python:Depends}
-Homepage: https://launchpad.net/glade2script
 Description: Glade interface engine for scripts (Gtk3 version)
  Glade2script allows a script (Bash, Python or other) to display and
  interact with a GUI (created with Glade).
@@ -56,7 +56,6 @@ Suggests:
  python-notify,
  python-vte,
  python-webkit
-Homepage: https://launchpad.net/glade2script
 Description: Glade interface engine for scripts (Gtk2 version)
  Glade2script allows a script (Bash, Python or other) to display and
  interact with a GUI (created with Glade).
