--- a/debian/control
+++ b/debian/control
@@ -31,7 +31,7 @@ Description: Glade interface engine for scripts (Gtk3 version)
  Documentation, many examples, and an interface giving access to the
  archive supports (simply install and run glade2script-doc).
  .
- Glade2script is already used by several softwares, such as Boot-Repair,
+ Glade2script is already used by several software, such as Boot-Repair,
  OS-Uninstaller, Debeditor, DeskWall, GUnity, LaunchBash, Malokal, 
  mkv_extractor_gui, Screencastor, Sylaba2, Xee, Zenitor.
  .
@@ -67,7 +67,7 @@ Description: Glade interface engine for scripts (Gtk2 version)
  Documentation, many examples, and an interface giving access to the
  archive supports (simply install and run glade2script-doc).
  .
- Glade2script is already used by several softwares, such as Boot-Repair,
+ Glade2script is already used by several software, such as Boot-Repair,
  OS-Uninstaller, Debeditor, DeskWall, GUnity, LaunchBash, Malokal, 
  mkv_extractor_gui, Screencastor, Sylaba2, Xee, Zenitor.
  .
